[package]
name = "markchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["macros", "io-util", "io-std", "sync"] }
libp2p = { version = "0.50", features = ["tokio", "floodsub", "mdns", "macros", "mplex", "noise", "tcp", "serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.25"
env_logger = "0.10"
log = "0.4.17"
structopt = { version = "0.3", default-features = false }
rand = "0.8.5"
multihash = { version = "0.18", features = ["serde-codec"] }
bincode = "1.3"
void = "1.0"
